fix: elevate scroll to top button when overlaps with banner (#19714)

--- a/projects/storefrontstyles/scss/components/content/navigation/_scroll-to-top.scss
+++ b/projects/storefrontstyles/scss/components/content/navigation/_scroll-to-top.scss
@@ -12,6 +12,12 @@
     animation: popup 1s 1;
   }
 
+  @include forFeature('a11yScrollToTopPositioning') {
+    &.elevated-position {
+      bottom: 180px;
+    }
+  }
+
   button {
     height: inherit;
     width: inherit;
